# autoregtank

./: .env.example  .gitignore  README.md  pyproject.toml
src/selftalk/: __init__.py  cli.py  client.py  engine.py  models.py  prompts.py
tests/: test_cli_missing_key.py  test_engine_critic.py  test_engine_debate.py  test_prompts.py
